[gd_scene load_steps=59 format=2]

[ext_resource path="res://game/unit/beholder/beholder.gd" type="Script" id=1]
[ext_resource path="res://game/unit/parts/float/floatingmachine.png" type="Texture" id=2]
[ext_resource path="res://game/unit/parts/float/floatingmachine_normal.png" type="Texture" id=3]
[ext_resource path="res://game/vfx/explosion_1.png" type="Texture" id=4]
[ext_resource path="res://game/vfx/beacon_black.png" type="Texture" id=5]
[ext_resource path="res://game/vfx/beacon_red.png" type="Texture" id=6]
[ext_resource path="res://game/sfx/float.wav" type="AudioStream" id=7]
[ext_resource path="res://game/unit/beholder/chassis.png" type="Texture" id=8]
[ext_resource path="res://game/unit/beholder/chassis_normal.png" type="Texture" id=9]
[ext_resource path="res://game/unit/beholder/leg.png" type="Texture" id=10]
[ext_resource path="res://game/unit/beholder/leg_normal.png" type="Texture" id=11]
[ext_resource path="res://game/unit/parts/anchor/frame.png" type="Texture" id=12]
[ext_resource path="res://game/unit/parts/anchor/crow.png" type="Texture" id=13]
[ext_resource path="res://game/unit/parts/anchor/crow_normal.png" type="Texture" id=14]
[ext_resource path="res://game/unit/beholder/tower_1.png" type="Texture" id=15]
[ext_resource path="res://game/unit/beholder/tower_1_normal.png" type="Texture" id=16]
[ext_resource path="res://game/unit/beholder/tower_2.png" type="Texture" id=17]
[ext_resource path="res://game/unit/beholder/tower_2_normal.png" type="Texture" id=18]
[ext_resource path="res://game/unit/beholder/support.png" type="Texture" id=19]
[ext_resource path="res://game/unit/beholder/surport_normal.png" type="Texture" id=20]
[ext_resource path="res://game/unit/beholder/tower_3.png" type="Texture" id=21]
[ext_resource path="res://game/unit/beholder/tower_3_normal.png" type="Texture" id=22]
[ext_resource path="res://game/unit/light_material.tres" type="Material" id=23]
[ext_resource path="res://game/vfx/ring.png" type="Texture" id=24]
[ext_resource path="res://game/vfx/energy_shield_1.png" type="Texture" id=25]
[ext_resource path="res://game/unit/enforcer/attack.png" type="Texture" id=26]
[ext_resource path="res://game/vfx/cloud_1.png" type="Texture" id=27]
[ext_resource path="res://game/vfx/sphere.png" type="Texture" id=28]
[ext_resource path="res://game/vfx/knight_laser.png" type="Texture" id=29]
[ext_resource path="res://game/vfx/circle.png" type="Texture" id=30]
[ext_resource path="res://game/vfx/unit_explosion_8.png" type="Texture" id=31]
[ext_resource path="res://game/vfx/unit_explosion_7.png" type="Texture" id=32]
[ext_resource path="res://game/vfx/unit_explosion_6.png" type="Texture" id=33]
[ext_resource path="res://game/vfx/unit_explosion_5.png" type="Texture" id=34]
[ext_resource path="res://game/vfx/unit_explosion_4.png" type="Texture" id=35]
[ext_resource path="res://game/vfx/unit_explosion_3.png" type="Texture" id=36]
[ext_resource path="res://game/vfx/unit_explosion_2.png" type="Texture" id=37]
[ext_resource path="res://game/vfx/unit_explosion_1.png" type="Texture" id=38]
[ext_resource path="res://game/unit/beholder/explosion.tres" type="Animation" id=39]
[ext_resource path="res://game/unit/beholder/anchor.tres" type="Animation" id=40]
[ext_resource path="res://game/unit/beholder/destroy.tres" type="Animation" id=41]
[ext_resource path="res://game/unit/beholder/idle.tres" type="Animation" id=42]
[ext_resource path="res://game/sfx/laser_loop.wav" type="AudioStream" id=43]
[ext_resource path="res://game/sfx/explosion_knight.wav" type="AudioStream" id=44]
[ext_resource path="res://game/unit/tombstone/tombstone_skill.wav" type="AudioStream" id=45]
[ext_resource path="res://game/vfx/hit_effect.tscn" type="PackedScene" id=46]
[ext_resource path="res://game/hpbar/hpbar_m.tscn" type="PackedScene" id=47]

[sub_resource type="Curve" id=1]

_data = [ Vector2( 0, 0.2272 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.5616 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="SpriteFrames" id=2]

animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ) ],
"loop": true,
"name": "blank",
"speed": 2.0
} ]

[sub_resource type="Animation" id=3]

tracks/0/type = "value"
tracks/0/path = NodePath("Set1:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -35, -35 ), Vector2( -35, -35 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Set2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 35, -35 ), Vector2( 35, -35 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Set3:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -35, 35 ), Vector2( -35, 35 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Set4:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 35, 35 ), Vector2( 35, 35 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Set1/Particles2D:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Set2/Particles2D2:emitting")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Set3/Particles2D3:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Set4/Particles2D4:emitting")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Set1:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Set2:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Set3:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/11/type = "value"
tracks/11/path = NodePath("Set4:modulate")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/12/type = "value"
tracks/12/path = NodePath("Sound/Activate:playing")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/imported = false
tracks/12/enabled = false
tracks/12/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/13/type = "value"
tracks/13/path = NodePath(".:modulate")
tracks/13/interp = 1
tracks/13/loop_wrap = true
tracks/13/imported = false
tracks/13/enabled = true
tracks/13/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.588235, 0.588235, 0.588235, 1 ) ]
}

[sub_resource type="Curve" id=4]

_data = [ Vector2( 0, 0.1568 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.814952, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=5]

offsets = PoolRealArray( 0.00625, 1 )
colors = PoolColorArray( 0.199219, 0.474487, 1, 1, 1, 1, 1, 0 )

[sub_resource type="Curve" id=6]

_data = [ Vector2( 0, 0.896 ), 0.0, 1.60142, 0, 0, Vector2( 1, 0.5264 ), -0.503052, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=7]

colors = PoolColorArray( 0.501961, 0.431373, 1, 1, 0.52549, 0.411765, 1, 0 )

[sub_resource type="Gradient" id=8]

colors = PoolColorArray( 0.411765, 0.360784, 1, 0, 1, 1, 1, 1 )

[sub_resource type="Curve" id=9]

_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Curve" id=10]

_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.992888, 0.237836 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CanvasItemMaterial" id=11]

blend_mode = 1

[node name="Beholder" type="Node2D"]
script = ExtResource( 1 )

[node name="Float" type="Node2D" parent="."]
editor/display_folded = true
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
use_parent_material = true

[node name="Set1" type="Sprite" parent="Float"]
editor/display_folded = true
use_parent_material = true
position = Vector2( -35, -35 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
flip_h = true

[node name="Particles2D" type="CPUParticles2D" parent="Float/Set1"]
position = Vector2( -20, -20 )
rotation = -3.66519
emitting = false
lifetime = 0.5
speed_scale = 2.0
randomness = 0.5
texture = ExtResource( 4 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 30.0
scale_amount_curve = SubResource( 1 )

[node name="Blank" type="AnimatedSprite" parent="Float/Set1"]
position = Vector2( -18, -18 )
rotation = -0.785397
scale = Vector2( 3, 0.5 )
frames = SubResource( 2 )
animation = "blank"
frame = 1
playing = true

[node name="Set2" type="Sprite" parent="Float"]
editor/display_folded = true
use_parent_material = true
position = Vector2( 35, -35 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )

[node name="Particles2D2" type="CPUParticles2D" parent="Float/Set2"]
position = Vector2( 20, -20 )
rotation = -2.35619
emitting = false
lifetime = 0.5
speed_scale = 2.0
randomness = 0.5
texture = ExtResource( 4 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 30.0
scale_amount_curve = SubResource( 1 )

[node name="Blank2" type="AnimatedSprite" parent="Float/Set2"]
position = Vector2( 18, -18 )
rotation = 0.785398
scale = Vector2( 3, 0.5 )
frames = SubResource( 2 )
animation = "blank"
frame = 1
playing = true

[node name="Set3" type="Sprite" parent="Float"]
editor/display_folded = true
use_parent_material = true
position = Vector2( -35, 35 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
flip_h = true
flip_v = true

[node name="Particles2D3" type="CPUParticles2D" parent="Float/Set3"]
position = Vector2( -20, 20 )
rotation = -5.49778
emitting = false
lifetime = 0.5
speed_scale = 2.0
randomness = 0.5
texture = ExtResource( 4 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 30.0
scale_amount_curve = SubResource( 1 )

[node name="Blank3" type="AnimatedSprite" parent="Float/Set3"]
position = Vector2( -18, 18 )
rotation = -2.35619
scale = Vector2( 3, 0.5 )
frames = SubResource( 2 )
animation = "blank"
frame = 1
playing = true

[node name="Set4" type="Sprite" parent="Float"]
editor/display_folded = true
use_parent_material = true
position = Vector2( 35, 35 )
texture = ExtResource( 2 )
normal_map = ExtResource( 3 )
flip_v = true

[node name="Particles2D4" type="CPUParticles2D" parent="Float/Set4"]
position = Vector2( 20, 20 )
rotation = -0.523598
emitting = false
lifetime = 0.5
speed_scale = 2.0
randomness = 0.5
texture = ExtResource( 4 )
angular_velocity = 180.0
angular_velocity_random = 1.0
radial_accel = 30.0
scale_amount_curve = SubResource( 1 )

[node name="Blank4" type="AnimatedSprite" parent="Float/Set4"]
position = Vector2( 18, 18 )
rotation = 2.35619
scale = Vector2( 3, 0.5 )
frames = SubResource( 2 )
animation = "blank"
frame = 1
playing = true

[node name="FloatAni" type="AnimationPlayer" parent="Float"]
anims/activate = SubResource( 3 )

[node name="Sound" type="Node2D" parent="Float"]

[node name="Activate" type="AudioStreamPlayer2D" parent="Float/Sound"]
stream = ExtResource( 7 )

[node name="Chassis" type="Sprite" parent="."]
texture = ExtResource( 8 )
normal_map = ExtResource( 9 )

[node name="Leg" type="Node2D" parent="Chassis"]
editor/display_folded = true
show_behind_parent = true

[node name="L1" type="Sprite" parent="Chassis/Leg"]
editor/display_folded = true
position = Vector2( -10, -15 )
rotation = -0.523599
texture = ExtResource( 10 )
normal_map = ExtResource( 11 )
offset = Vector2( -10, -15 )
flip_h = true

[node name="AnchorTL" type="Sprite" parent="Chassis/Leg/L1"]
editor/display_folded = true
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
show_behind_parent = true
use_parent_material = true
position = Vector2( -13, -35 )
rotation = -0.261799
texture = ExtResource( 12 )

[node name="Crow" type="Sprite" parent="Chassis/Leg/L1/AnchorTL"]
use_parent_material = true
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )

[node name="R1" type="Sprite" parent="Chassis/Leg"]
editor/display_folded = true
position = Vector2( 10, -15 )
rotation = 0.523599
texture = ExtResource( 10 )
normal_map = ExtResource( 11 )
offset = Vector2( 10, -15 )

[node name="AnchorTR" type="Sprite" parent="Chassis/Leg/R1"]
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
show_behind_parent = true
use_parent_material = true
position = Vector2( 13, -35 )
rotation = 0.261799
texture = ExtResource( 12 )

[node name="Crow" type="Sprite" parent="Chassis/Leg/R1/AnchorTR"]
use_parent_material = true
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )

[node name="R3" type="Sprite" parent="Chassis/Leg"]
editor/display_folded = true
position = Vector2( 10, 15 )
rotation = -0.523599
texture = ExtResource( 10 )
normal_map = ExtResource( 11 )
offset = Vector2( 10, 15 )
flip_v = true

[node name="AnchorBR" type="Sprite" parent="Chassis/Leg/R3"]
editor/display_folded = true
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
show_behind_parent = true
use_parent_material = true
position = Vector2( 13, 35 )
rotation = 2.87979
texture = ExtResource( 12 )

[node name="Crow" type="Sprite" parent="Chassis/Leg/R3/AnchorBR"]
use_parent_material = true
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )

[node name="R4" type="Sprite" parent="Chassis/Leg"]
editor/display_folded = true
position = Vector2( -10, 15 )
rotation = 0.523599
texture = ExtResource( 10 )
normal_map = ExtResource( 11 )
offset = Vector2( -10, 15 )
flip_h = true
flip_v = true

[node name="AnchorBL" type="Sprite" parent="Chassis/Leg/R4"]
editor/display_folded = true
modulate = Color( 0.588235, 0.588235, 0.588235, 1 )
show_behind_parent = true
use_parent_material = true
position = Vector2( -13, 35 )
rotation = -2.87979
texture = ExtResource( 12 )

[node name="Crow" type="Sprite" parent="Chassis/Leg/R4/AnchorBL"]
use_parent_material = true
position = Vector2( 0, -10 )
scale = Vector2( 1, 0.7 )
texture = ExtResource( 13 )
normal_map = ExtResource( 14 )

[node name="Tower" type="Node2D" parent="Chassis"]

[node name="1" type="Sprite" parent="Chassis/Tower"]
visible = false
texture = ExtResource( 15 )
normal_map = ExtResource( 16 )
offset = Vector2( 0, -38 )

[node name="2" type="Sprite" parent="Chassis/Tower"]
visible = false
texture = ExtResource( 17 )
normal_map = ExtResource( 18 )
offset = Vector2( 0, -19 )

[node name="Legs" type="Node2D" parent="Chassis/Tower"]
editor/display_folded = true
show_behind_parent = true

[node name="Surport1" type="Sprite" parent="Chassis/Tower/Legs"]
position = Vector2( -8, -8 )
rotation = -2.35619
texture = ExtResource( 19 )
normal_map = ExtResource( 20 )
offset = Vector2( 10, 0 )

[node name="Surport2" type="Sprite" parent="Chassis/Tower/Legs"]
position = Vector2( 8, -8 )
rotation = -0.785397
texture = ExtResource( 19 )
normal_map = ExtResource( 20 )
offset = Vector2( 10, 0 )

[node name="Surport3" type="Sprite" parent="Chassis/Tower/Legs"]
position = Vector2( 8, 8 )
rotation = 0.785397
texture = ExtResource( 19 )
normal_map = ExtResource( 20 )
offset = Vector2( 10, 0 )

[node name="Surport4" type="Sprite" parent="Chassis/Tower/Legs"]
position = Vector2( -8, 8 )
rotation = 2.3562
texture = ExtResource( 19 )
normal_map = ExtResource( 20 )
offset = Vector2( 10, 0 )

[node name="3" type="Sprite" parent="Chassis/Tower"]
editor/display_folded = true
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 21 )
normal_map = ExtResource( 22 )

[node name="OpenEf" type="CPUParticles2D" parent="Chassis/Tower/3"]
show_behind_parent = true
material = ExtResource( 23 )
emitting = false
texture = ExtResource( 24 )
gravity = Vector2( 0, 0 )
angular_velocity = 180.0
scale_amount_curve = SubResource( 4 )
color_ramp = SubResource( 5 )

[node name="Sprite" type="Sprite" parent="Chassis/Tower/3"]
modulate = Color( 0, 0, 0, 1 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 24 )

[node name="Charge" type="CPUParticles2D" parent="Chassis/Tower/3"]
material = ExtResource( 23 )
texture = ExtResource( 25 )
emission_shape = 1
emission_sphere_radius = 1.0
spread = 180.0
gravity = Vector2( 0, 0 )
angular_velocity = 360.0
angular_velocity_random = 1.0
radial_accel = 30.0
radial_accel_random = 1.0
scale_amount = 0.4
scale_amount_curve = SubResource( 6 )
color_ramp = SubResource( 7 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="Chassis/Tower/3"]
material = ExtResource( 23 )
amount = 2
texture = ExtResource( 26 )
gravity = Vector2( 0, 0 )
angular_velocity = 60.0
angular_velocity_random = 1.0
scale_amount = 0.4
color_ramp = SubResource( 8 )

[node name="ShotPoint" type="Position2D" parent="Chassis/Tower"]
visible = false

[node name="HitPoint" type="Position2D" parent="Chassis/Tower/ShotPoint"]
editor/display_folded = true
position = Vector2( 0, -200 )

[node name="HitEffect" type="CPUParticles2D" parent="Chassis/Tower/ShotPoint/HitPoint"]
material = ExtResource( 23 )
rotation = -9.31322e-010
speed_scale = 3.0
texture = ExtResource( 27 )
gravity = Vector2( 0, 0 )
angular_velocity = 360.0
angular_velocity_random = 1.0
angle = 60.0
angle_random = 1.0
scale_amount_curve = SubResource( 9 )
color = Color( 1, 1, 1, 0.666667 )

[node name="HitLight" type="Sprite" parent="Chassis/Tower/ShotPoint/HitPoint"]
modulate = Color( 0, 0.435294, 1, 1 )
material = ExtResource( 23 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 28 )

[node name="LaserBeam" type="Sprite" parent="Chassis/Tower/ShotPoint"]
editor/display_folded = true
modulate = Color( 0.628906, 0.834747, 1, 1 )
material = ExtResource( 23 )
scale = Vector2( 0.6, 10 )
texture = ExtResource( 29 )
offset = Vector2( 0, -10 )

[node name="LaserLight" type="Sprite" parent="Chassis/Tower/ShotPoint/LaserBeam"]
modulate = Color( 0.545098, 0.764706, 1, 1 )
material = ExtResource( 23 )
texture = ExtResource( 29 )
offset = Vector2( 0, -10 )

[node name="LaserStart" type="CPUParticles2D" parent="Chassis/Tower/ShotPoint"]
editor/display_folded = true
material = ExtResource( 23 )
speed_scale = 2.0
texture = ExtResource( 30 )
emission_shape = 1
emission_sphere_radius = 1.0
gravity = Vector2( 0, -10 )
angular_velocity = 360.0
angular_velocity_random = 1.0
angle = 180.0
angle_random = 1.0
scale_amount = 1.5
scale_amount_curve = SubResource( 10 )
color = Color( 0.839216, 0.898039, 0.984314, 0.6 )

[node name="StartLight" type="Sprite" parent="Chassis/Tower/ShotPoint/LaserStart"]
modulate = Color( 0.141176, 0.615686, 1, 1 )
material = ExtResource( 23 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 28 )

[node name="Rotatable" type="Node2D" parent="."]

[node name="Explosion" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="Main" type="Node2D" parent="Explosion"]

[node name="ExRing1" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.233246, 0.214844, 0 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 24 )

[node name="Ex8" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 0, 0, 0, 1 )
rotation = -1.5708
texture = ExtResource( 31 )

[node name="Ex7" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 0.1875, 0.162266, 0.154541, 1 )
texture = ExtResource( 32 )

[node name="Ex6" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.375, 0, 1 )
texture = ExtResource( 33 )

[node name="Ex5" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.109375, 0.109375, 1 )
texture = ExtResource( 34 )

[node name="Ex4" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.265625, 0.265625, 1 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 35 )

[node name="Ex3" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.40625, 0.40625, 1 )
texture = ExtResource( 36 )

[node name="Ex2" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.555267, 0.0351563, 1 )
rotation = 3.14159
texture = ExtResource( 37 )

[node name="Ex1" type="Sprite" parent="Explosion/Main"]
visible = false
rotation = 1.5708
texture = ExtResource( 38 )

[node name="Ex1a" type="Sprite" parent="Explosion/Main"]
visible = false
texture = ExtResource( 38 )

[node name="Particle" type="CPUParticles2D" parent="Explosion/Main"]
emitting = false
amount = 30
preprocess = 1.0
explosiveness = 0.8
spread = 180.0
gravity = Vector2( 0, 0 )
angular_velocity = 180.0
radial_accel = 180.0

[node name="Center" type="Sprite" parent="Explosion/Main"]
visible = false
modulate = Color( 1, 0.298096, 0.0234375, 1 )
material = SubResource( 11 )
scale = Vector2( 4, 4 )
texture = ExtResource( 28 )

[node name="ExplosionAni" type="AnimationPlayer" parent="Explosion"]
anims/explosion = ExtResource( 39 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/anchor = ExtResource( 40 )
anims/destroy = ExtResource( 41 )
anims/idle = ExtResource( 42 )

[node name="Sound" type="Node2D" parent="."]
editor/display_folded = true

[node name="Attack" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 43 )

[node name="Destroy" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 44 )

[node name="Skill" type="AudioStreamPlayer2D" parent="Sound"]
stream = ExtResource( 45 )

[node name="HitEffect" parent="." instance=ExtResource( 46 )]
type = 0
rect_area = Rect2( -30, -30, 60, 60 )

[node name="Hp" parent="." instance=ExtResource( 47 )]
position = Vector2( 0, -75 )

